--- a/package.json
+++ b/package.json
@@ -21,15 +21,38 @@
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "lucide-react": "^0.525.0",
     "postcss": "^8.5.6",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  }
+  },
+  "description": "A full-stack web platform that enables users to **list skills they offer**, find others with complementary skills, and **initiate swap requests**. Built for collaborative learning and peer-to-peer upskilling — without the need for payment.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kapsk2801/ChakDeCoders.git"
+  },
+  "keywords": [
+    "skill-swap",
+    "peer-learning",
+    "fullstack",
+    "express",
+    "react",
+    "postgres",
+    "hackathon",
+    "odoo"
+  ],
+  "author": "Saksham Kapoor",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Kapsk2801/ChakDeCoders/issues"
+  },
+  "homepage": "https://github.com/Kapsk2801/ChakDeCoders#readme"
 }
